--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
+    "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "mongoose": "^8.4.4",
     "next": "14.2.4",
