--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,20 @@
 {
   "name": "Sai General Store",
   "short_name": "Sai General Store",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#11192d",
+  "theme_color": "#11192d",
   "icons": [
     {
       "src": "/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable"
+      "type": "image/png"
     },
     {
       "src": "/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
+      "type": "image/png"
     }
-  ],
-  "theme_color": "#11192d",
-  "background_color": "#11192d",
-  "display": "standalone"
+  ]
 }
