--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --experimental-https",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -21,7 +21,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-loader-spinner": "^6.1.6",
-    "typed.js": "^2.1.0"
+    "typed.js": "^2.1.0",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "eslint": "^8",
