--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 DATABASE_URL='mongodb+srv://devesh1217:Coder%402004@cluster0.lqygbff.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+NEXT_PUBLIC_VAPID_PUBLIC_KEY='BMHgctVnXVN_T-Nh8btbxI0kltLSJF6vw47z_1gNtFeZPvXsmQ0pZQom5VM9-zbFQVB0L1eVXa3uHBQIwU7U_mA'
+VAPID_PRIVATE_KEY='zHmO1do122u6XMkCa5JXD8s2krkboofikLTi5Yx4kTk'
