--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --experimental-https",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -15,7 +15,7 @@
     "@mui/material": "^5.15.21",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
-    "mongoose": "^8.4.4",
+    "mongoose": "^8.9.2",
     "next": "14.2.4",
     "next-pwa": "^5.6.0",
     "react": "^18",
